publish: Add bottom padding, fix other problems on mobile/short screens
generated from commit b27916a9e6c69f47fb1e75cf92fb231a56b955e5

--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -376,8 +376,13 @@ body {
   font-size: 14px;
   background-color: #2d2d2d;
   background-image: linear-gradient(-180deg, #171717 0px, #2d2d2d 450px);
+  min-height: 450px;
+  background-repeat: no-repeat;
   color: #d5d5d5;
   padding: 0 10px; }
+
+.wrap {
+  padding-bottom: 30px; }
 
 .main {
   max-width: 560px;
